FinalCheckPoint/yal2jvm/src/parserGrammar.java
/* parserGrammar.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. parserGrammar.java */
import java.io.*;

public class parserGrammar/*@bgen(jjtree)*/implements parserGrammarTreeConstants, parserGrammarConstants {/*@bgen(jjtree)*/
  protected JJTparserGrammarState jjtree = new JJTparserGrammarState();public static int NumberErrors=0;

  public static void main(String args []) throws ParseException, FileNotFoundException
  {
    /* Open File */

         /* Open File */
         InputStream stream=null;

         try{
           stream = new FileInputStream(args[0]);
         }
         catch(FileNotFoundException e){
           System.out.println("usage: java Yal2jvm"+ args[0]);
           System.exit(0);
         }



    parserGrammarTokenManager tm= new parserGrammarTokenManager(new SimpleCharStream(stream));

    parserGrammar parser = new parserGrammar(stream);

        /* Parser creation */
        /*parserGrammar parser = new parserGrammar(System.in);//em vez de System.in, passar o nome da variavel do ficheiro*/
        ASTModule root = parser.Module();

        /* AST Print */
        System.out.println("//////////////////////////////");
        System.out.println("//// Abstract Syntax Tree ////");
        System.out.println("//////////////////////////////");
        System.out.println("");
    root.dump("");


        System.out.println("");
        System.out.println("//////////////////////////////");
        System.out.println("/////// Semantic Tree ////////");
        System.out.println("//////////////////////////////");
        System.out.println("");
    root.analyse(null);

    System.out.println("");
        System.out.println("//////////////////////////////");
        System.out.println("/////////// Jasmin ///////////");
        System.out.println("//////////////////////////////");
        System.out.println("");

    String line = "";
    int loop_no=0;
    line = root.convertToByteCodes(null, loop_no);
        String filename;

        if(args[0].contains("/")){
                String[] fileTemp = args[0].split("/");
                filename = fileTemp[1];
                filename = filename.substring(0, filename.lastIndexOf('.'));
                System.out.println("The " + filename + ".j file was generated from the file " + fileTemp[1]);
        }
        else{
                filename =args[0];
                filename = filename.substring(0, filename.lastIndexOf('.'));
                System.out.println("The " + filename + ".j file was generated from the file " + filename);
        }





    try {
      PrintWriter writer = new PrintWriter(filename+".j", "UTF-8");
      writer.println(line);
      writer.close();
    } catch(Exception e) {
      e.printStackTrace();
    }
  }

  void skipto(int kind) throws ParseException {/*@bgen(jjtree) skipto */
ASTskipto jjtn000 = new ASTskipto(JJTSKIPTO);
boolean jjtc000 = true;
jjtree.openNodeScope(jjtn000);
try {ParseException e = generateParseException();  // generate the exception object.
  //System.out.println(e.toString());  // print the error message
  printMessagesError(e);
  Token t;
  do {
    t = getNextToken();
  } while (t.kind != kind);/*@bgen(jjtree)*/
} finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
}   // The above loop consumes tokens all the way up to a token of
    // "kind".  We use a do-while loop rather than a while because the
    // current token is the one immediately before the erroneous token
    // (in our case the token immediately before what should have been
    // "if"/"while".

  }

  void skipto_do_not_consume_last(int kind) throws ParseException {/*@bgen(jjtree) skipto_do_not_consume_last */
ASTskipto_do_not_consume_last jjtn000 = new ASTskipto_do_not_consume_last(JJTSKIPTO_DO_NOT_CONSUME_LAST);
boolean jjtc000 = true;
jjtree.openNodeScope(jjtn000);
try {ParseException e = generateParseException();  // generate the exception object.
  //System.out.println(e.toString());  // print the error message
  printMessagesError(e);
  Token t;
  int token_kind;
  boolean consume = false;
  do{

        if(consume)
                t = getNextToken();

        token_kind = getToken(0).kind;

        consume = true;

  } while (token_kind != kind);/*@bgen(jjtree)*/
} finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
}
  }

  void printMessagesError(ParseException exception) throws ParseException {/*@bgen(jjtree) printMessagesError */
     ASTprintMessagesError jjtn000 = new ASTprintMessagesError(JJTPRINTMESSAGESERROR);
     boolean jjtc000 = true;
     jjtree.openNodeScope(jjtn000);
     try {if(NumberErrors == 0) {
                System.out.println("ERROR CATCHED");
        }

        NumberErrors++;

        //System.out.println("Number of errors: ",NumberErrors);

        System.out.println(exception.currentToken.next.image + " Line " +
        exception.currentToken.beginLine + " Column " +
        exception.currentToken.beginColumn);

        System.out.println("EXPECTED TOKENS");

        for(int i = 0; i < exception.expectedTokenSequences.length; i++) {
                for(int k = 0; k < exception.expectedTokenSequences[i].length; k++) {
                        System.out.println(tokenImage[exception.expectedTokenSequences[i][k]]);
                }

        }/*@bgen(jjtree)*/
     } finally {
       if (jjtc000) {
         jjtree.closeNodeScope(jjtn000, true);
       }
     }
  }

  final public ASTModule Module() throws ParseException {/*@bgen(jjtree) Module */
                    ASTModule jjtn000 = new ASTModule(JJTMODULE);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(MODULE);
      t = jj_consume_token(ID);
jjtn000.setName(t.image);
      jj_consume_token(LCHAVETA);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        Declaration();
      }
      try {
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case FUNCTION:{
            ;
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            break label_2;
          }
          Function();
        }
        jj_consume_token(RCHAVETA);
      } catch (ParseException exception) {
skipto(RCHAVETA);
      }
jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void Declaration() throws ParseException {/*@bgen(jjtree) Declaration */
                    ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token t1,t2;
    try {
      try {
        if (jj_2_1(2147483647)) {
          ArrayElement();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            ScalarElement();
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASSIGN:{
          jj_consume_token(ASSIGN);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LPAR_RECT:{
            jj_consume_token(LPAR_RECT);
            ArraySize();
            jj_consume_token(RPAR_RECT);
            break;
            }
          case ADDSUB_OP:
          case INTEGER:{
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case ADDSUB_OP:{
              t1 = jj_consume_token(ADDSUB_OP);
jjtn000.setName(t1.image);
              break;
              }
            default:
              jj_la1[3] = jj_gen;
              ;
            }
            t2 = jj_consume_token(INTEGER);
jjtn000.setNameInteger(t2.image);
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        jj_consume_token(PVIRG);
      } catch (ParseException exception) {
System.out.println("CATCH DECLARATION");
                skipto(PVIRG);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Function() throws ParseException {/*@bgen(jjtree) Function */
                 ASTFunction jjtn000 = new ASTFunction(JJTFUNCTION);
                 boolean jjtc000 = true;
                 jjtree.openNodeScope(jjtn000);Token t;
    try {
      try {
        if (jj_2_3(3)) {
          jj_consume_token(FUNCTION);
          if (jj_2_2(2)) {
            ArrayElement();
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case ID:{
              ScalarElement();
              break;
              }
            default:
              jj_la1[6] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
          jj_consume_token(ASSIGN);
          t = jj_consume_token(ID);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case FUNCTION:{
            jj_consume_token(FUNCTION);
            t = jj_consume_token(ID);
            break;
            }
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(LPAR);
jjtn000.setName(t.image);
      } catch (ParseException exception) {
System.out.println("CATCH FUNCTION");
                 //System.out.println(exception.currentToken.image);
                 //System.out.println(exception.getMessage());
                skipto(LPAR);
      }
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:{
          Varlist();
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          ;
        }
        jj_consume_token(RPAR);
      } catch (ParseException exception) {
System.out.println("CATCH VARLIST RPAR");
                skipto(RPAR);
      }
      jj_consume_token(LCHAVETA);
      Stmtlst();
      jj_consume_token(RCHAVETA);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Varlist() throws ParseException {/*@bgen(jjtree) Varlist */
  ASTVarlist jjtn000 = new ASTVarlist(JJTVARLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        if (jj_2_4(2)) {
          ArrayElement();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            ScalarElement();
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case VIRG:{
            ;
            break;
            }
          default:
            jj_la1[10] = jj_gen;
            break label_3;
          }
          jj_consume_token(VIRG);
          if (jj_2_5(2)) {
            ArrayElement();
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case ID:{
              ScalarElement();
              break;
              }
            default:
              jj_la1[11] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      } catch (ParseException exception) {
System.out.println("CATCH VARLIST");
                skipto_do_not_consume_last(RPAR);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void ArrayElement() throws ParseException {/*@bgen(jjtree) ArrayElement */
                     ASTArrayElement jjtn000 = new ASTArrayElement(JJTARRAYELEMENT);
                     boolean jjtc000 = true;
                     jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
jjtn000.setName(t.image);
      jj_consume_token(LPAR_RECT);
      jj_consume_token(RPAR_RECT);
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void ScalarElement() throws ParseException {/*@bgen(jjtree) ScalarElement */
                      ASTScalarElement jjtn000 = new ASTScalarElement(JJTSCALARELEMENT);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(ID);
jjtree.closeNodeScope(jjtn000, true);
                         jjtc000 = false;
jjtn000.setName(t.image);
    } finally {
if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  final public void Stmtlst() throws ParseException {/*@bgen(jjtree) Stmtlst */
  ASTStmtlst jjtn000 = new ASTStmtlst(JJTSTMTLST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case WHILE:
          case IF:
          case ID:{
            ;
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            break label_4;
          }
          Stmt();
        }
      } catch (ParseException exception) {
System.out.println("CATCH STMLST");
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Stmt() throws ParseException {/*@bgen(jjtree) Stmt */
  ASTStmt jjtn000 = new ASTStmt(JJTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case WHILE:{
          While();
          break;
          }
        case IF:{
          If();
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          if (jj_2_6(3)) {
            Assign();
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case ID:{
              CallStmt();
              break;
              }
            default:
              jj_la1[14] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      } catch (ParseException exception) {
System.out.println("CATCH STMT");
                skipto(PVIRG);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void Assign() throws ParseException {/*@bgen(jjtree) Assign */
  ASTAssign jjtn000 = new ASTAssign(JJTASSIGN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Lhs();
      jj_consume_token(ASSIGN);
      Rhs();
      jj_consume_token(PVIRG);
    } catch (Throwable jjte000) {
if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  final public void Lhs() throws ParseException {/*@bgen(jjtree) Lhs */
  ASTLhs jjtn000 = new ASTLhs(JJTLHS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_7(2)) {
        ArrayAccess();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:{
          ScalarAccess();
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  final public void Rhs() throws ParseException {/*@bgen(jjtree) Rhs */
            ASTRhs jjtn000 = new ASTRhs(JJTRHS);
            boolean jjtc000 = true;
            jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ADDSUB_OP:
      case INTEGER:
      case ID:{
        Term();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ADDSUB_OP:
        case ARITH_OP:
        case BITWISE_OP:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ARITH_OP:{
            t = jj_consume_token(ARITH_OP);
            break;
            }
          case BITWISE_OP:{
            t = jj_consume_token(BITWISE_OP);
            break;
            }
          case ADDSUB_OP:{
            t = jj_consume_token(ADDSUB_OP);
            break;
            }
          default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          Term();
jjtn000.setName(t.image);
          break;
          }
        default:
          jj_la1[17] = jj_gen;
          ;
        }
        break;
        }
      case LPAR_RECT:{
        jj_consume_token(LPAR_RECT);
        ArraySize();
        jj_consume_token(RPAR_RECT);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  final public void ArraySize() throws ParseException {/*@bgen(jjtree) ArraySize */
                  ASTArraySize jjtn000 = new ASTArraySize(JJTARRAYSIZE);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        ScalarAccess();
        break;
        }
      case INTEGER:{
        t = jj_consume_token(INTEGER);
jjtree.closeNodeScope(jjtn000, true);
                                jjtc000 = false;
jjtn000.setName(t.image);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }
